Problem fixed for test cases

--- a/.env
+++ b/.env
@@ -1,18 +1,3 @@
-# Mental Health Companion - Configuration
-
-# Gemini API Configuration
-# Get keys from: https://makersuite.google.com/app/apikey
-# Format: key1,key2,key3 (comma-separated for rotation)
-GEMINI_API_KEYS=AIzaSyBpG-IyFq7pxBxthVOtJWSlFcvO6bb8_es
-
-# Model Settings
-GEMINI_MODEL=gemini-1.5-flash-8b
-TEMPERATURE=0.7
-MAX_OUTPUT_TOKENS=2048
-
-# Operation Mode
-# Set to True for testing without API calls
+GEMINI_API_KEYS=AIzaSyCWMoNXlltZwyQJYx7B17PGW98qKdCU8w4
 MOCK_MODE=False
-
-# Logging
-LOG_LEVEL=INFO
+GEMINI_MODEL=gemini-1.5-flash
