--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-google-generativeai>=0.8.0
-python-dotenv>=1.0.0
-requests>=2.31.0
-gradio>=3.40.0
-loguru>=0.7.0
+google-genai
+python-dotenv
+requests
+gradio>=4.0.0
+loguru
